Fix JSON handling.
Fixes #238.

--- a/lobster/commands/data/workflow.html
+++ b/lobster/commands/data/workflow.html
@@ -145,7 +145,7 @@
                         {% else %}
                         <td>
                             {% for path, name in jsons[row[0]] %}
-                            <a href={{ path }}>{{ name }}</a>
+                            <a href="../{{ path }}">{{ name }}</a>
                             {% endfor %}
                         </td>
                         {% endif %}
