--- a/lobster/commands/data/workflow.html
+++ b/lobster/commands/data/workflow.html
@@ -116,12 +116,14 @@
             <tr>
                 <th>Workflow</th>
                 <th>Events</th>
-                <th>Events read</th>
-                <th>Events written</th>
+                <th>read</th>
+                <th>written</th>
                 <th>Units total</th>
-                <th>Units unmasked</th>
-                <th>Units written</th>
-                <th>Units failed</th>
+                <th>unmasked</th>
+                <th>written</th>
+                <th>paused</th>
+                <th>failed</th>
+                <th>skipped</th>
                 <th>Progress</th>
                 {% if jsons|length > 0 %}<th>JSON</th>{% endif %}
             </tr>
@@ -133,8 +135,10 @@
             {% endif %}
                 {% for cell in row %}
                 <td{% if row == summary[-1] %} class="footer"{% endif %}>
-                    {% if cell == row[-2] and cell > 0 and row != summary[-1] %}
-                        <a href="logs/{{row[0]}}">{{cell}}</a>
+                    {% if loop.revindex == 2 and cell > 0 and row != summary[-1] %}
+                        <a href="../logs/skipped_{{row[0]}}.txt">{{cell}}</a>
+                    {% elif loop.revindex == 3 and cell > 0 and row != summary[-1] %}
+                        <a href="../logs/failed_{{row[0]}}">{{cell}}</a>
                     {% else %}
                         {{ cell }}
                     {% endif %}
@@ -286,7 +290,7 @@
                     <td>{{ code }}</td>
                     <td>{{ values[0] }}</td>
                     {% for id, files in values[1]|dictsort|reverse %}
-                    <td>{% for file in files %} <a href="logs/{{ id }}/{{ file }}">{{ file }}</a>{% endfor %}</td>
+                    <td>{% for file in files %} <a href="../logs/{{ id }}/{{ file }}">{{ file }}</a>{% endfor %}</td>
                     {% endfor %}
                 </tr>
                 {% endfor %}
