--- a/lobster/commands/data/category.html
+++ b/lobster/commands/data/category.html
@@ -100,7 +100,7 @@
                 <li class="active">
                     Summary for
                     <select id="categories">
-                        <option value="" disabled>change workflow</option>
+                        <option value="" disabled>change category</option>
                         <option value="all" {% if label == 'all categories' %}selected="selected"{% endif %}>all categories</option>
                         {% for c in categories %}
                         <option value="{{ c }}"{% if label == c %} selected="selected"{% endif %}>{{ c }}</option>
@@ -118,7 +118,7 @@
                 <th>Events</th>
                 <th>read</th>
                 <th>written</th>
-                <th>Units total</th>
+                <th>Units</th>
                 <th>unmasked</th>
                 <th>written</th>
                 <th>paused</th>
@@ -128,13 +128,13 @@
                 {% if jsons|length > 0 %}<th>JSON</th>{% endif %}
             </tr>
             {% for row in summary %}
-            {% if row[0] is sum %}
-            <tr>
+            {% if loop.revindex == 1 %}
+            <tr class="footer">
             {% else %}
             <tr{{ loop.cycle('', ' class="alt"') }}>
             {% endif %}
                 {% for cell in row %}
-                <td{% if row == summary[-1] %} class="footer"{% endif %}>
+                <td>
                     {% if loop.revindex == 2 and cell > 0 and row != summary[-1] %}
                         <a href="../logs/skipped_{{row[0]}}.txt">{{cell}}</a>
                     {% elif loop.revindex == 3 and cell > 0 and row != summary[-1] %}
