Fix missing plots on the overview page.

--- a/lobster/commands/data/index.html
+++ b/lobster/commands/data/index.html
@@ -139,8 +139,8 @@
             <a href="fraction-hist.png"><img alt="" src="fraction-hist.png"/></a>
             <h3>Output Performance</h3>
             {% if good_tasks %}
-            <a href="output-hist.png"><img alt="" src="output-all-hist.png"/></a>
-            <a href="output-total-plot.png"><img alt="" src="output-total-all-plot.png"/></a>
+            <a href="output-hist.png"><img alt="" src="all/output-hist.png"/></a>
+            <a href="output-total-plot.png"><img alt="" src="all/output-total-plot.png"/></a>
             <a href="units-total-plot.png"><img alt="" src="units-total-plot.png"/></a>
             {% else %}
             <p>No output yet!</p>
