--- a/lobster/commands/data/category.html
+++ b/lobster/commands/data/category.html
@@ -186,6 +186,7 @@
             <a class="workflow" href="good-memory-hist.png"><img alt="" src="good-memory-hist.png"/></a>
             <a class="workflow" href="good-workdir-footprint-hist.png"><img alt="" src="good-workdir-footprint-hist.png"/></a>
             <a class="workflow" href="good-network-bandwidth-prof.png"><img alt="" src="good-network-bandwidth-prof.png"/></a>
+            <a class="workflow" href="good-exe-efficiency-hist.png"><img alt="" src="good-exe-efficiency-hist.png"/></a>
             <h3>Task Timing</h3>
             <p>
                 <span id="goodhist" class="button left pressed"><a href="#" id="goodhist">statistics</a></span><span id="goodhist" class="button right depressed"><a href="#" id="goodprof">profile</a></span>
@@ -206,11 +207,9 @@
                 {{ label_wrapper('good-setup-release-hist.png', 'Time to set up release and initialize cms environment', class='good') }}
             </ul></div>
             <div><ul class="img-list">
-                {{ label_wrapper('good-processing-hist.png', 'Time between begin processing the first event and finish processing', class='good') }}
+                {{ label_wrapper('good-processing-hist.png', 'Time the executable took to run', class='good') }}
             </ul></div>
             <div class="good more"><ul class="img-list">
-                {{ label_wrapper('good-processing-cpu-hist.png', 'CPU processing time (from cmssw)', class='good more') }}
-                {{ label_wrapper('good-processing-non-cpu-hist.png', 'Total processing time minus CPU processing time', class='good more') }}
                 {{ label_wrapper('good-epilogue-hist.png', 'Time to run the epilogue command', class='good more') }}
                 {{ label_wrapper('good-stage-out-hist.png', 'Time to stage out all output files', class='good more') }}
                 {{ label_wrapper('good-transfer-out-wait-hist.png', 'Time between stageout completion and WQ task.receive_output_start', class='good more') }}
@@ -231,6 +230,7 @@
             <a class="workflow" href="merge-memory-hist.png"><img alt="" src="merge-memory-hist.png"/></a>
             <a class="workflow" href="merge-workdir-footprint-hist.png"><img alt="" src="merge-workdir-footprint-hist.png"/></a>
             <a class="workflow" href="merge-network-bandwidth-prof.png"><img alt="" src="merge-network-bandwidth-prof.png"/></a>
+            <a class="workflow" href="merge-exe-efficiency-hist.png"><img alt="" src="merge-exe-efficiency-hist.png"/></a>
             <h3>Task Timing</h3>
             <p>
                 <span id="mergehist" class="button left pressed"><a href="#" id="mergehist">statistics</a></span><span id="mergehist" class="button right depressed"><a href="#" id="mergeprof">profile</a></span>
@@ -251,11 +251,9 @@
                 {{ label_wrapper('merge-setup-release-hist.png', 'Time to set up release and initialize cms environment', class='merge') }}
             </ul></div>
             <div><ul class="img-list">
-                {{ label_wrapper('merge-processing-hist.png', 'Time between begin processing the first event and finish processing', class='merge') }}
+                {{ label_wrapper('merge-processing-hist.png', 'Time the executable took to run', class='merge') }}
             </ul></div>
             <div class="merge more"><ul class="img-list">
-                {{ label_wrapper('merge-processing-cpu-hist.png', 'CPU processing time (from cmssw)', class='merge more') }}
-                {{ label_wrapper('merge-processing-non-cpu-hist.png', 'Total processing time minus CPU processing time', class='merge more') }}
                 {{ label_wrapper('merge-epilogue-hist.png', 'Time to run the epilogue command', class='merge more') }}
                 {{ label_wrapper('merge-stage-out-hist.png', 'Time to stage out all output files', class='merge more') }}
                 {{ label_wrapper('merge-transfer-out-wait-hist.png', 'Time between stageout completion and WQ task.receive_output_start', class='merge more') }}
