Write configuration out when plotting.
Fixes #273.

--- a/lobster/commands/data/index.html
+++ b/lobster/commands/data/index.html
@@ -78,6 +78,8 @@
             </tr>
         </table>
 
+        <p><a href="config.py">Configuration</a></p>
+
         <h1 id="navwflow">Category Summary</h1>
         <table class="fancy">
             <tr>
