--- a/lobster/commands/data/index.html
+++ b/lobster/commands/data/index.html
@@ -121,9 +121,9 @@
         <div class="maincontent">
             <a class="workflow" href="all/all-tasks-hist.png"><img alt="" src="all/all-tasks-hist.png"/></a>
         {% if good_tasks %}
-            <h3>Efficiency (all workflows)</h3>
-            <a href="cpu-wall-hist.png"><img alt="" src="cpu-wall-hist.png"/></a>
-            <a href="cpu-wall-int-hist.png"><img alt="" src="cpu-wall-int-hist.png"/></a>
+            <h3>Efficiency</h3>
+            <a href="cpu-wall-hist.png"><img alt="" src="all/cpu-wall-hist.png"/></a>
+            <a href="cpu-wall-int-hist.png"><img alt="" src="all/cpu-wall-int-hist.png"/></a>
         {% endif %}
         </div>
         {% endif %}
@@ -134,12 +134,12 @@
         </div>
         <div class="maincontent">
             <h3>Tasks and Workers</h3>
-            <a href="workers-plot.png"><img alt="" src="workers-plot.png"/></a>
-            <a href="turnover-hist.png"><img alt="" src="turnover-hist.png"/></a>
-            <a href="worker-deaths-hist.png"><img alt="" src="worker-deaths-hist.png"/></a>
-            <a href="tasks-plot.png"><img alt="" src="tasks-plot.png"/></a>
+            <a href="workers-plot.png"><img alt="" src="all/workers-plot.png"/></a>
+            <a href="turnover-hist.png"><img alt="" src="all/turnover-hist.png"/></a>
+            <a href="worker-deaths-hist.png"><img alt="" src="all/worker-deaths-hist.png"/></a>
+            <a href="tasks-plot.png"><img alt="" src="all/tasks-plot.png"/></a>
             <h3>Time Breakdown</h3>
-            <a href="fraction-hist.png"><img alt="" src="fraction-hist.png"/></a>
+            <a href="fraction-hist.png"><img alt="" src="all/fraction-hist.png"/></a>
             <h3>Output Performance</h3>
             {% if good_tasks %}
             <a href="output-hist.png"><img alt="" src="all/output-hist.png"/></a>
