Plot resource usage/availability for the overview.
Fixes #270.

--- a/lobster/commands/data/index.html
+++ b/lobster/commands/data/index.html
@@ -138,6 +138,10 @@
             <a href="turnover-hist.png"><img alt="" src="all/turnover-hist.png"/></a>
             <a href="worker-deaths-hist.png"><img alt="" src="all/worker-deaths-hist.png"/></a>
             <a href="tasks-plot.png"><img alt="" src="all/tasks-plot.png"/></a>
+            <h3>Resources</h3>
+            <a href="cores-plot.png"><img alt="" src="all/cores-plot.png"/></a>
+            <a href="memory-plot.png"><img alt="" src="all/memory-plot.png"/></a>
+            <a href="disk-plot.png"><img alt="" src="all/disk-plot.png"/></a>
             <h3>Time Breakdown</h3>
             <a href="fraction-hist.png"><img alt="" src="all/fraction-hist.png"/></a>
             <h3>Output Performance</h3>
