Show merge status in overviews.
Allows the user to see how many processed units are merged, and thus see
how far the project is overall.

Fixes #251.

--- a/lobster/commands/data/category.html
+++ b/lobster/commands/data/category.html
@@ -127,10 +127,12 @@
                 <th>Units</th>
                 <th>unmasked</th>
                 <th>written</th>
+                <th>merged</th>
                 <th>paused</th>
                 <th>failed</th>
                 <th>skipped</th>
                 <th>Progress</th>
+                <th>Merged</th>
                 {% if jsons|length > 0 %}<th>JSON</th>{% endif %}
             </tr>
             {% for row in summary %}
@@ -140,17 +142,18 @@
             <tr{{ loop.cycle('', ' class="alt"') }}>
             {% endif %}
                 {% for cell in row %}
-                {% if loop.index != 1 and loop.revindex > 1 %}{% set cell = "{0:,}".format(cell).replace(",", "&nbsp;") %}{% set attr=' class="right"' %}{% else %}{% set attr='' %}{% endif %}
+                {% if loop.index != 1 and loop.revindex > 2 %}{% set cell = "{0:,}".format(cell).replace(",", "&nbsp;") %}{% endif %}
+                {% if loop.index != 1 %}{% set attr=' class="right"' %}{% else %}{% set attr='' %}{% endif %}
                 <td{{attr}}>
-                    {% if loop.revindex == 2 and cell != '0' and row != summary[-1] %}
+                    {% if loop.revindex == 3 and cell != '0' and row != summary[-1] %}
                         <a href="../logs/skipped_{{row[0]}}.txt">{{cell}}</a>
-                    {% elif loop.revindex == 3 and cell != '0' and row != summary[-1] %}
+                    {% elif loop.revindex == 4 and cell != '0' and row != summary[-1] %}
                         <a href="../logs/failed_{{row[0]}}">{{cell}}</a>
                     {% else %}
                         {{ cell }}
                     {% endif %}
                 </td>
-                    {% if cell == row[-1] and jsons|length > 0%}
+                    {% if loop.revindex == 1 and jsons|length > 0 %}
                         {% if row == summary[-1] %}
                         <td class="footer"></td>
                         {% else %}
