--- a/lobster/commands/data/index.html
+++ b/lobster/commands/data/index.html
@@ -90,10 +90,12 @@
                 <th>Units</th>
                 <th>unmasked</th>
                 <th>written</th>
+                <th>merged</th>
                 <th>paused</th>
                 <th>failed</th>
                 <th>skipped</th>
                 <th>Progress</th>
+                <th>Merged</th>
             </tr>
             {% for row in summary %}
             {% if loop.revindex == 1 %}
@@ -102,7 +104,7 @@
             <tr{{ loop.cycle('', ' class="alt"') }}>
             {% endif %}
                 {% for cell in row %}
-                {% if loop.index != 1 and loop.revindex > 1 %}{% set cell = "{0:,}".format(cell).replace(",", "&nbsp;") %}{% set attr=' class="right"' %}{% else %}{% set attr='' %}{% endif %}
+                {% if loop.index != 1 and loop.revindex > 2 %}{% set cell = "{0:,}".format(cell).replace(",", "&nbsp;") %}{% set attr=' class="right"' %}{% else %}{% set attr='' %}{% endif %}
                     {% if loop.index == 1 and cell != 'Total' %}
                     <td><a href="{{ cell }}">{{ cell }}</a></td>
                     {% else %}
