--- a/lobster/commands/data/index.html
+++ b/lobster/commands/data/index.html
@@ -124,8 +124,8 @@
             <a class="workflow" href="all/all-tasks-hist.png"><img alt="" src="all/all-tasks-hist.png"/></a>
         {% if good_tasks %}
             <h3>Efficiency</h3>
-            <a href="cpu-wall-hist.png"><img alt="" src="all/cpu-wall-hist.png"/></a>
-            <a href="cpu-wall-int-hist.png"><img alt="" src="all/cpu-wall-int-hist.png"/></a>
+            <a href="all/cpu-wall-hist.png"><img alt="" src="all/cpu-wall-hist.png"/></a>
+            <a href="all/cpu-wall-int-hist.png"><img alt="" src="all/cpu-wall-int-hist.png"/></a>
         {% endif %}
         </div>
         {% endif %}
@@ -136,20 +136,20 @@
         </div>
         <div class="maincontent">
             <h3>Tasks and Workers</h3>
-            <a href="workers-plot.png"><img alt="" src="all/workers-plot.png"/></a>
-            <a href="turnover-hist.png"><img alt="" src="all/turnover-hist.png"/></a>
-            <a href="worker-deaths-hist.png"><img alt="" src="all/worker-deaths-hist.png"/></a>
-            <a href="tasks-plot.png"><img alt="" src="all/tasks-plot.png"/></a>
+            <a href="all/workers-plot.png"><img alt="" src="all/workers-plot.png"/></a>
+            <a href="all/turnover-hist.png"><img alt="" src="all/turnover-hist.png"/></a>
+            <a href="all/worker-deaths-hist.png"><img alt="" src="all/worker-deaths-hist.png"/></a>
+            <a href="all/tasks-plot.png"><img alt="" src="all/tasks-plot.png"/></a>
             <h3>Resources</h3>
-            <a href="cores-plot.png"><img alt="" src="all/cores-plot.png"/></a>
-            <a href="memory-plot.png"><img alt="" src="all/memory-plot.png"/></a>
-            <a href="disk-plot.png"><img alt="" src="all/disk-plot.png"/></a>
+            <a href="all/cores-plot.png"><img alt="" src="all/cores-plot.png"/></a>
+            <a href="all/memory-plot.png"><img alt="" src="all/memory-plot.png"/></a>
+            <a href="all/disk-plot.png"><img alt="" src="all/disk-plot.png"/></a>
             <h3>Time Breakdown</h3>
-            <a href="fraction-hist.png"><img alt="" src="all/fraction-hist.png"/></a>
+            <a href="all/fraction-hist.png"><img alt="" src="all/fraction-hist.png"/></a>
             <h3>Output Performance</h3>
             {% if good_tasks %}
-            <a href="output-hist.png"><img alt="" src="all/output-hist.png"/></a>
-            <a href="output-total-plot.png"><img alt="" src="all/output-total-plot.png"/></a>
+            <a href="all/output-hist.png"><img alt="" src="all/output-hist.png"/></a>
+            <a href="all/output-total-plot.png"><img alt="" src="all/output-total-plot.png"/></a>
             <a href="units-total-plot.png"><img alt="" src="units-total-plot.png"/></a>
             {% else %}
             <p>No output yet!</p>
