Add requested resources to tasks and plot them.
Also adds tasksize to the plots and thus fixes #264.

--- a/lobster/commands/data/category.html
+++ b/lobster/commands/data/category.html
@@ -190,11 +190,16 @@
             <a class="workflow" href="good-time-detail-pie.png"><img class="side" alt="" src="good-time-detail-pie.png"/></a>
         </div>
         <div class="maincontent">
-            <h3>Task Resources</h3>
+            <h3>Task Resources Utilized</h3>
             <a class="workflow" href="good-memory-hist.png"><img alt="" src="good-memory-hist.png"/></a>
             <a class="workflow" href="good-workdir-footprint-hist.png"><img alt="" src="good-workdir-footprint-hist.png"/></a>
             <a class="workflow" href="good-network-bandwidth-prof.png"><img alt="" src="good-network-bandwidth-prof.png"/></a>
             <a class="workflow" href="good-exe-efficiency-hist.png"><img alt="" src="good-exe-efficiency-hist.png"/></a>
+            <h3>Task Resources Requested</h3>
+            <a class="workflow" href="good-requested-memory-prof.png"><img alt="" src="good-requested-memory-prof.png"/></a>
+            <a class="workflow" href="good-requested-disk-prof.png"><img alt="" src="good-requested-disk-prof.png"/></a>
+            <a class="workflow" href="good-requested-cores-prof.png"><img alt="" src="good-requested-cores-prof.png"/></a>
+            <a class="workflow" href="good-tasksize-prof.png"><img alt="" src="good-tasksize-prof.png"/></a>
             <h3>Task Timing</h3>
             <p>
                 <span id="goodhist" class="button left pressed"><a href="#" id="goodhist">statistics</a></span><span id="goodhist" class="button right depressed"><a href="#" id="goodprof">profile</a></span>
