Add plot of running tasks to category pages.

--- a/lobster/commands/data/category.html
+++ b/lobster/commands/data/category.html
@@ -175,6 +175,7 @@
             <a class="workflow" href="time-pie.png"><img class="side" alt="" src="time-pie.png"/></a>
         </div>
         <div class="maincontent">
+            <a class="workflow" href="tasks-plot.png"><img alt="" src="tasks-plot.png"/></a>
             <a class="workflow" href="all-tasks-hist.png"><img alt="" src="all-tasks-hist.png"/></a>
         {% if good_tasks %}
             <h3>Efficiency</h3>
