--- a/lobster/commands/data/category.html
+++ b/lobster/commands/data/category.html
@@ -205,6 +205,7 @@
 	    {% endfor %}
 	    </table>
         {% endif %}
+        {% endif %}
         </div>
 
         <h2 id="navgood">Successful Tasks</h2>
