--- a/lobster/commands/data/category.html
+++ b/lobster/commands/data/category.html
@@ -219,6 +219,7 @@
             <a class="workflow" href="good-workdir-footprint-hist.png"><img alt="" src="good-workdir-footprint-hist.png"/></a>
             <a class="workflow" href="good-network-bandwidth-prof.png"><img alt="" src="good-network-bandwidth-prof.png"/></a>
             <a class="workflow" href="good-exe-efficiency-hist.png"><img alt="" src="good-exe-efficiency-hist.png"/></a>
+            <a class="workflow" href="good-exhausted-attempts-prof.png"><img alt="" src="good-exhausted-attempts-prof.png"/></a>
             <h3>Task Resources Requested</h3>
             <a class="workflow" href="good-requested-memory-prof.png"><img alt="" src="good-requested-memory-prof.png"/></a>
             <a class="workflow" href="good-requested-disk-prof.png"><img alt="" src="good-requested-disk-prof.png"/></a>
@@ -230,7 +231,8 @@
                 <span id="goodmore" class="button depressed"><a href="#" id="goodmore">show timeline breakdown</a></span>
             </p>
             <div class="good more"><ul class="img-list">
-                {{ label_wrapper('good-eviction-hist.png', 'Time lost to eviction or exceeding requested resources', class="good") }}
+                {{ label_wrapper('good-eviction-hist.png', 'Time lost to eviction', class="good") }}
+                {{ label_wrapper('good-exhaustion-hist.png', 'Time lost to exceeding requested resources', class="good") }}
             </ul></div>
             <div><ul class="img-list">
                 {{ label_wrapper('good-runtime-hist.png', 'Time from wrapper start to processing end', class='good') }}
@@ -268,6 +270,7 @@
             <a class="workflow" href="merge-workdir-footprint-hist.png"><img alt="" src="merge-workdir-footprint-hist.png"/></a>
             <a class="workflow" href="merge-network-bandwidth-prof.png"><img alt="" src="merge-network-bandwidth-prof.png"/></a>
             <a class="workflow" href="merge-exe-efficiency-hist.png"><img alt="" src="merge-exe-efficiency-hist.png"/></a>
+            <a class="workflow" href="merge-exhausted-attempts-prof.png"><img alt="" src="merge-exhausted-attempts-prof.png"/></a>
             <h3>Task Timing</h3>
             <p>
                 <span id="mergehist" class="button left pressed"><a href="#" id="mergehist">statistics</a></span><span id="mergehist" class="button right depressed"><a href="#" id="mergeprof">profile</a></span>
@@ -275,6 +278,7 @@
             </p>
             <div class="merge more"><ul class="img-list">
                 {{ label_wrapper('merge-eviction-hist.png', 'Time lost to eviction', class="merge") }}
+                {{ label_wrapper('merge-exhausted-hist.png', 'Time lost to exceeding requested resources', class="merge") }}
             </ul></div>
             <div><ul class="img-list">
                 {{ label_wrapper('merge-runtime-hist.png', 'Time from wrapper start to processing end', class='merge') }}
@@ -314,6 +318,7 @@
             <a class="workflow" href="failed-memory-hist.png"><img alt="" src="failed-memory-hist.png"/></a>
             <a class="workflow" href="failed-workdir-footprint-hist.png"><img alt="" src="failed-workdir-footprint-hist.png"/></a>
             <a class="workflow" href="failed-network-bandwidth-prof.png"><img alt="" src="failed-network-bandwidth-prof.png"/></a>
+            <a class="workflow" href="failed-exhausted-attempts-prof.png"><img alt="" src="failed-exhausted-attempts-prof.png"/></a>
             <h3>Task Logs</h3>
             <table class="fancy">
                 <tr>
