--- a/lobster/commands/data/category.html
+++ b/lobster/commands/data/category.html
@@ -220,10 +220,10 @@
             <a class="workflow" href="good-network-bandwidth-prof.png"><img alt="" src="good-network-bandwidth-prof.png"/></a>
             <a class="workflow" href="good-exe-efficiency-hist.png"><img alt="" src="good-exe-efficiency-hist.png"/></a>
             <a class="workflow" href="good-exhausted-attempts-prof.png"><img alt="" src="good-exhausted-attempts-prof.png"/></a>
-            <h3>Task Resources Requested</h3>
-            <a class="workflow" href="good-requested-memory-prof.png"><img alt="" src="good-requested-memory-prof.png"/></a>
-            <a class="workflow" href="good-requested-disk-prof.png"><img alt="" src="good-requested-disk-prof.png"/></a>
-            <a class="workflow" href="good-requested-cores-prof.png"><img alt="" src="good-requested-cores-prof.png"/></a>
+            <h3>Task Resources Allocated</h3>
+            <a class="workflow" href="good-allocated-memory-prof.png"><img alt="" src="good-allocated-memory-prof.png"/></a>
+            <a class="workflow" href="good-allocated-disk-prof.png"><img alt="" src="good-allocated-disk-prof.png"/></a>
+            <a class="workflow" href="good-allocated-cores-prof.png"><img alt="" src="good-allocated-cores-prof.png"/></a>
             <a class="workflow" href="good-tasksize-prof.png"><img alt="" src="good-tasksize-prof.png"/></a>
             <h3>Task Timing</h3>
             <p>
@@ -232,7 +232,7 @@
             </p>
             <div class="good more"><ul class="img-list">
                 {{ label_wrapper('good-eviction-hist.png', 'Time lost to eviction', class="good") }}
-                {{ label_wrapper('good-exhaustion-hist.png', 'Time lost to exceeding requested resources', class="good") }}
+                {{ label_wrapper('good-exhaustion-hist.png', 'Time lost to exceeding allocated resources', class="good") }}
             </ul></div>
             <div><ul class="img-list">
                 {{ label_wrapper('good-runtime-hist.png', 'Time from wrapper start to processing end', class='good') }}
@@ -278,7 +278,7 @@
             </p>
             <div class="merge more"><ul class="img-list">
                 {{ label_wrapper('merge-eviction-hist.png', 'Time lost to eviction', class="merge") }}
-                {{ label_wrapper('merge-exhausted-hist.png', 'Time lost to exceeding requested resources', class="merge") }}
+                {{ label_wrapper('merge-exhausted-hist.png', 'Time lost to exceeding allocated resources', class="merge") }}
             </ul></div>
             <div><ul class="img-list">
                 {{ label_wrapper('merge-runtime-hist.png', 'Time from wrapper start to processing end', class='merge') }}
