Add cores to measured resources.

--- a/lobster/commands/data/category.html
+++ b/lobster/commands/data/category.html
@@ -217,6 +217,7 @@
             <h3>Task Resources Utilized</h3>
             <a class="workflow" href="good-memory-hist.png"><img alt="" src="good-memory-hist.png"/></a>
             <a class="workflow" href="good-workdir-footprint-hist.png"><img alt="" src="good-workdir-footprint-hist.png"/></a>
+            <a class="workflow" href="good-cores-hist.png"><img alt="" src="good-cores-hist.png"/></a>
             <a class="workflow" href="good-network-bandwidth-prof.png"><img alt="" src="good-network-bandwidth-prof.png"/></a>
             <a class="workflow" href="good-exe-efficiency-hist.png"><img alt="" src="good-exe-efficiency-hist.png"/></a>
             <a class="workflow" href="good-exhausted-attempts-prof.png"><img alt="" src="good-exhausted-attempts-prof.png"/></a>
@@ -268,6 +269,7 @@
             <h3>Task Resources</h3>
             <a class="workflow" href="merge-memory-hist.png"><img alt="" src="merge-memory-hist.png"/></a>
             <a class="workflow" href="merge-workdir-footprint-hist.png"><img alt="" src="merge-workdir-footprint-hist.png"/></a>
+            <a class="workflow" href="merge-cores-hist.png"><img alt="" src="merge-cores-hist.png"/></a>
             <a class="workflow" href="merge-network-bandwidth-prof.png"><img alt="" src="merge-network-bandwidth-prof.png"/></a>
             <a class="workflow" href="merge-exe-efficiency-hist.png"><img alt="" src="merge-exe-efficiency-hist.png"/></a>
             <a class="workflow" href="merge-exhausted-attempts-prof.png"><img alt="" src="merge-exhausted-attempts-prof.png"/></a>
@@ -317,6 +319,7 @@
             <h3>Task Resources</h3>
             <a class="workflow" href="failed-memory-hist.png"><img alt="" src="failed-memory-hist.png"/></a>
             <a class="workflow" href="failed-workdir-footprint-hist.png"><img alt="" src="failed-workdir-footprint-hist.png"/></a>
+            <a class="workflow" href="failed-cores-hist.png"><img alt="" src="failed-cores-hist.png"/></a>
             <a class="workflow" href="failed-network-bandwidth-prof.png"><img alt="" src="failed-network-bandwidth-prof.png"/></a>
             <a class="workflow" href="failed-exhausted-attempts-prof.png"><img alt="" src="failed-exhausted-attempts-prof.png"/></a>
             <h3>Task Logs</h3>
