Show fraction plots as stacks, not histograms.

--- a/lobster/commands/data/index.html
+++ b/lobster/commands/data/index.html
@@ -148,8 +148,8 @@
             <a href="all/memory-plot.png"><img alt="" src="all/memory-plot.png"/></a>
             <a href="all/disk-plot.png"><img alt="" src="all/disk-plot.png"/></a>
             <h3>Time Breakdown</h3>
-            <a href="all/lobster-fraction-hist.png"><img alt="" src="all/lobster-fraction-hist.png"/></a>
-            <a href="all/wq-fraction-hist.png"><img alt="" src="all/wq-fraction-hist.png"/></a>
+            <a href="all/lobster-fraction-stack.png"><img alt="" src="all/lobster-fraction-stack.png"/></a>
+            <a href="all/wq-fraction-stack.png"><img alt="" src="all/wq-fraction-stack.png"/></a>
             <h3>Output Performance</h3>
             {% if good_tasks %}
             <a href="all/output-hist.png"><img alt="" src="all/output-hist.png"/></a>
