Add a second efficiency plot
Fixes #484.

--- a/lobster/commands/data/category.html
+++ b/lobster/commands/data/category.html
@@ -220,6 +220,7 @@
             <a class="workflow" href="good-cores-hist.png"><img alt="" src="good-cores-hist.png"/></a>
             <a class="workflow" href="good-network-bandwidth-prof.png"><img alt="" src="good-network-bandwidth-prof.png"/></a>
             <a class="workflow" href="good-exe-efficiency-hist.png"><img alt="" src="good-exe-efficiency-hist.png"/></a>
+            <a class="workflow" href="good-exe-normed-efficiency-hist.png"><img alt="" src="good-exe-normed-efficiency-hist.png"/></a>
             <a class="workflow" href="good-exhausted-attempts-prof.png"><img alt="" src="good-exhausted-attempts-prof.png"/></a>
             <h3>Task Resources Allocated</h3>
             <a class="workflow" href="good-allocated-memory-prof.png"><img alt="" src="good-allocated-memory-prof.png"/></a>
