--- a/lobster/commands/data/index.html
+++ b/lobster/commands/data/index.html
@@ -150,6 +150,7 @@
             <h3>Time Breakdown</h3>
             <a href="all/lobster-fraction-stack.png"><img alt="" src="all/lobster-fraction-stack.png"/></a>
             <a href="all/wq-fraction-stack.png"><img alt="" src="all/wq-fraction-stack.png"/></a>
+            <a href="all/return-fraction-stack.png"><img alt="" src="all/return-fraction-stack.png"/></a>
             <h3>Output Performance</h3>
             {% if good_tasks %}
             <a href="all/output-hist.png"><img alt="" src="all/output-hist.png"/></a>
